hphp/test/zend/bad/ext-spl/SplDoublyLinkedList_count_param_SplDoublyLinkedList.php
<?php
$dll = new SplDoublyLinkedList(2);
$dll->count(new SplDoublyLinkedList(2));
?>